# SearchEngine

./: CMakeLists.txt  Readme.md
SearchEngine/: Readme.md
SearchEngine/include/: SearchServer.h
SearchEngine/resources/: dbase.json  file001.txt  file002.txt  file004.txt  file005.txt  file006.txt  file007.txt  file008.txt  file009.txt
SearchEngine/src/: InvertedIndex.cpp  SearchServer.cpp
SearchEngine/tests/: SearchEngineTest.cpp
data/: config.json
docs/: file001.txt  file002.txt  file003.txt  file004.txt  file005.txt  file006.txt  file007.txt  file008.txt  file009.txt  file010.txt  file011.txt
include/: ConverterJSON.h  InvertedIndex.h  JsonStorage.h  SearchServer.h  TextUtils.h  WebServer.h  external_libs.h
resources/: config.json  file003.txt  file010.txt
src/: CMakeLists.txt  ConverterJSON.cpp  InvertedIndex.cpp  JsonStorage.cpp  SearchServer.cpp  TextUtils.cpp  WebServer.cpp  main.cpp
tests/: CMakeLists.txt  SearchEngineTests.cpp
web/: index.html  script.js  style.css
